2012-09-04  Kangil Han  <kangil.han@samsung.com>

        [WK2] Use explicit constructor in InjectedBundle.
        https://bugs.webkit.org/show_bug.cgi?id=95746

        Reviewed by Sam Weinig.

        Added explicit keyword in constructor of InjectedBundle in order to avoid implicit type conversion.

        * WebProcess/InjectedBundle/InjectedBundle.h:
        (InjectedBundle):

2012-09-03  Sam Weinig  <sam@webkit.org>

        Part 1 of removing PlatformString.h, move remaining functions to new homes
        https://bugs.webkit.org/show_bug.cgi?id=95702

        Reviewed by Beth Dakin.

        * UIProcess/WebPageProxy.h:
        Forward declare SharedBuffer.

2012-09-04  Jeffrey Pfau  <jpfau@apple.com>

        Make plugins respect third-party storage blocking setting
        https://bugs.webkit.org/show_bug.cgi?id=94888

        Reviewed by Brady Eidson.

        Plugins that are in a third-party context should be put into private browsing mode so their storage is temporary.

        * WebProcess/Plugins/PluginView.cpp:
        (WebKit::PluginView::isPrivateBrowsingEnabled): Put the plugin into private browsing mode if it is in a third-party context.
        (WebKit::PluginView::privateBrowsingStateChanged): Make sure a plugin doesn't leave private browsing mode if it's in a third-party context.

2012-09-04  Pekka Vuorela  <pvuorela@iki.fi>

        [Qt] Remove use of deprecated QInputMethod method
        https://bugs.webkit.org/show_bug.cgi?id=95741

        Reviewed by Simon Hausmann.

        Adapt from deprecated QInputMethod::visible() to isVisible().

        * UIProcess/qt/QtWebPageEventHandler.cpp:
        (WebKit::setInputPanelVisible):
        (WebKit::QtWebPageEventHandler::inputPanelVisibleChanged):

2012-09-04  Allan Sandfeld Jensen  <allan.jensen@nokia.com>

        Allow child-frame content in hit-tests.
        https://bugs.webkit.org/show_bug.cgi?id=95204

        Reviewed by Antonio Gomes.
